--- a/app/views/cat/info.html.erb
+++ b/app/views/cat/info.html.erb
@@ -1,38 +1,34 @@
+<!--
 <form action="#" method="get" style="margin-bottom:10px;">
 	<input type="button" id="additem" value="ねこをふやす" />
 	<input type="button" id="hsort" value="名前でならべる" />
 	<input type="button" id="rsort" value="ランダムでならべる" />
 </form>
-
+-->
 <div id="grid-content">
+	
 	<div class="cat">
-		<h3>maru01</h3>
-		<a href="#" class="goods-menu"><%= image_tag 'maru01.png' %></a>
 		<a href="#" class="delete"><%= image_tag 'close_button_black_w30.png' %></a>
+		<a href="#" class="goods-menu" data="maru01"><%= image_tag 'maru01.png' %></a>
 	</div>
 	<div class="cat">
-		<h3>maru02</h3>
-		<a href="#" class="goods-menu"><%= image_tag 'maru02.png' %></a>
 		<a href="#" class="delete"><%= image_tag 'close_button_black_w30.png' %></a>
+		<a href="#" class="goods-menu" data="maru02"><%= image_tag 'maru02.png' %></a>
 	</div>
-	<div class="cat">
-		<h3>maru03</h3>
-		<a href="#" class="goods-menu"><%= image_tag 'maru03.png' %></a>
+	<div class="cat" data="maru03">
 		<a href="#" class="delete"><%= image_tag 'close_button_black_w30.png' %></a>
+		<a href="#" class="goods-menu" data="maru03"><%= image_tag 'maru03.png' %></a>
 	</div>
-	<div class="cat">
-		<h3>maru04</h3>
-		<a href="#" class="goods-menu"><%= image_tag 'maru04.png' %></a>
-		<a href="#" class="delete"><%= image_tag 'close_button_black_w30.png' %></a>
+
+	<!-- hidden templates -->
+	<div id="templates">
+		<div class="template">
+			<div class="catItem">
+				<a href="#" class="delete">
+					<img src="/assets/close_button_black_w30.png" width="30" height="30" />
+				</a>				
+			</div>
+		</div>
 	</div>
-	<div class="cat">
-		<h3>maru05</h3>
-		<a href="#" class="goods-menu"><%= image_tag 'maru05.png' %></a>
-		<a href="#" class="delete"><%= image_tag 'close_button_black_w30.png' %></a>
-	</div>
-	<div class="cat">
-		<h3>maru06</h3>
-		<a href="#" class="goods-menu"><%= image_tag 'maru06.png' %></a>
-		<a href="#" class="delete"><%= image_tag 'close_button_black_w30.png' %></a>
-	</div>
+
 </div>
